Sign in page, fix feedback schema

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,14 @@
  *= require_self
  *= require_tree . 
 */
+
+#content {
+    width: 800px;
+    margin: 0 auto 0 auto;
+}
+
+.welcome {
+    width: 650px;
+    margin: 130px auto 0 auto;
+    font-size: 22pt;
+}
