--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.event {
+    border-bottom: 1px solid #999;
+    border-top: 1px solid #999;
+    padding: 10px;
+    width: 600px;
+    margin: 30px auto 0 auto;
+}
+
+.participants {
+    color: #777;
+}
+
+.attend {
+    float: right;
+}
