--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,7 +6,18 @@
  *= require_tree . 
 */
 
-#content {
+.topbar {
+    margin: 0;
+    padding: 10px;
+}
+
+.logout {
+    display: block;
+    float: right;
+    margin-right: 20px;
+}
+
+#content, .logout {
     font-size: 16pt;
 }
 
