--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -2,12 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.event {
-    border-bottom: 1px solid #999;
-    border-top: 1px solid #999;
+.events .event {
+    border: 1px solid #999;
+    border-radius: 8px;
     padding: 10px;
     width: 600px;
     margin: 30px auto 0 auto;
+}
+
+.events .event h3 {
+    margin: 0;
 }
 
 .participants {
