--- a/app/views/application/_topbar.html.haml
+++ b/app/views/application/_topbar.html.haml
@@ -1,4 +1,5 @@
 .topbar
-  .logout
-    = link_to '/logout' do
-      &there4; Sign out
+  .small-logo
+    %strong the bootstrap
+    = '::'
+    = section
