--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,10 +1,10 @@
-= render :partial => 'topbar'
-
 #content
-  = link_to '/' do
-    &larr; Back to events
+  = render :partial => 'topbar', :locals => { :section => 'events' }
 
-  = render :partial => 'inline', :locals => { :e => @event }
+  = link_to '/' do
+    &larr; Back to all events
+
+  = render :partial => 'inline', :locals => { :event => @event }
 
   %h3 Feedback
 
