--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -18,11 +18,12 @@
     margin-top: 30px;
 }
 
-.event h3 {
-    font-weight: normal;
-    font-size: 28pt;
-}
-
 .event h3 a, .event h3 a:visited {
     color: #289;
 }
+
+.note {
+    color: #777;
+}
+
+
