--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -14,12 +14,46 @@
     float: right;
 }
 
+.event-details {
+    color: #999;
+    vertical-align: middle;
+    font-size: 70%;
+    margin-left: 35pt;
+}
+
+.event .attending, .event .not-attending {
+    float: left;
+    margin-right: 15px;
+    display: inline-block;
+    font-size: 46pt;
+}
+
+.not-attending {
+    color: #444;
+}
+
+.attending {
+    color: #378;
+}
+
 .event {
     margin-top: 30px;
 }
 
+.event h3.compact {
+    margin: 0;
+}
+
 .event h3 a, .event h3 a:visited {
-    color: #289;
+    display: block;
+    color: #eee;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.event h3 a:hover {
+    background-color: #333;
 }
 
 .note {
