Add date.js, starting on admin things

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -32,6 +32,14 @@
     - @events.each do |e|
       = render :partial => 'events/teaser', :locals => { :event => e }
 
+  .new-event
+    = link_to '/events/new', :class => 'button' do
+      %span.symbol +
+      Create new event
+
+  .clear
+    
+
   = render :partial => 'account'
 
 = render :partial => 'footer'
