Feedback works and is pretty :)

--- a/app/assets/stylesheets/feedbacks.css.scss
+++ b/app/assets/stylesheets/feedbacks.css.scss
@@ -1,3 +1,36 @@
-// Place all the styles related to the feedbacks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.create-event a {
+    float: right;
+}
+
+.feedback {
+    margin-left: 10px;
+    margin-top: 40px;
+    border-left: 5px solid #ddd;
+    padding-left: 10px;
+}
+
+form textarea, form input {
+    background-color: #181818;
+    color: #eee;
+    font-family: WCRoughTrad;
+    border: 1px solid white;
+    margin: 0;
+    padding: 3px;
+    font-size: 20pt;
+    border-radius: 3px;
+}
+
+form input {
+    width: 300pt;
+}
+
+form textarea {
+    width: 100%;
+    min-height: 200px;
+}
+
+form.feedback a.button {
+    float: right;
+    margin-top: -50pt;
+}
+
