--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -32,10 +32,12 @@
     - @events.each do |e|
       = render :partial => 'events/teaser', :locals => { :event => e }
 
-  .new-event
-    = link_to '/events/new', :class => 'button' do
-      %span.symbol +
-      Create new event
+  - if @is_admin
+    .clear
+    .new-event
+      = link_to '/events/new', :class => 'button' do
+        %span.symbol +
+        Create new event
 
   .clear
     
