Can delete feedback nao

--- a/app/views/feedbacks/_index.html.haml
+++ b/app/views/feedbacks/_index.html.haml
@@ -1,10 +1,16 @@
 - feedbacks.each do |f|
   .feedback
+    - if f.user.id == @_current_user.id
+      .delete
+        = link_to "/events/#{event.id}/feedbacks/#{f.id}", :method => :delete, :class => :button do
+          %span.symbol -
+          delete
+
     %strong
       %span.symbol.big c
       feedback
     from
-    %a(href="https://twitter.com/#{@_current_user.nick}")= "@#{@_current_user.nick}"
+    %a(href="https://twitter.com/#{f.user.nick}")= "@#{f.user.nick}"
     %span(title="#{f.created_at.localtime.to_formatted_s(:long_ordinal)}")
       = distance_of_time_in_words_to_now(f.created_at)
     ago
