return to list, clickable logo

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,6 +57,10 @@ h3 {
     font-family: FFFTusjBold;
 }
 
+.small-logo a:hover {
+    text-decoration: none;
+}
+
 .small-logo strong {
     font-weight: normal;
     color: #893;
