--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -25,7 +25,7 @@
       = hidden_field_tag 'occurs_at', '', :placeholder => 'where the event takes place'
 
     %p
-      = text_area_tag 'description', '', :placeholder => 'what is this event about, in a few sentences, and instructions on how to meet up'
+      = text_area_tag 'description', '', :placeholder => 'what is this event about, in a few sentences'
 
     .create-event
       %a(href='#' class='button' onclick='$(this).closest("form").submit(); return false;')
