--- a/app/views/feedbacks/_index.html.haml
+++ b/app/views/feedbacks/_index.html.haml
@@ -4,7 +4,7 @@
       .delete
         = link_to "/events/#{event.id}/feedbacks/#{f.id}", :method => :delete, :class => :button do
           %span.symbol -
-          delete
+          Delete feedback
 
     %strong
       %span.symbol.big c
