--- a/app/views/events/_teaser.html.haml
+++ b/app/views/events/_teaser.html.haml
@@ -10,7 +10,7 @@
       = event.place
       .event-details
         in
-        = distance_of_time_in_words_to_now(event.occurs_at.localtime)
+        = distance_of_time_in_words_to_now(event.occurs_at)
         with
         %span.symbol U
         = event.attendances.count
