See past events

--- a/app/views/events/_teaser.html.haml
+++ b/app/views/events/_teaser.html.haml
@@ -9,8 +9,12 @@
       &mdash;
       = event.place
       .event-details
-        in
-        = distance_of_time_in_words_to_now(event.occurs_at)
+        - if event.occurs_at > Time.now
+          in
+          = distance_of_time_in_words_to_now(event.occurs_at)
+        - else
+          = distance_of_time_in_words_to_now(event.occurs_at)
+          ago
         with
         %span.symbol U
         = event.attendances.count
