Commas don't work well with haml in production (spacing was off, replaced with ticks)

--- a/app/views/events/_inline.html.haml
+++ b/app/views/events/_inline.html.haml
@@ -16,8 +16,7 @@
     - else
       - event.users.each_with_index do |u, i|
         %a(href='https://twitter.com/#{u.nick}/') @#{u.nick}
-        - if i < event.users.count - 1
-          %span> ,
+        %span.symbol . 
 
   .attend
     - if attendance.nil?
