--- a/app/assets/stylesheets/font.css.scss
+++ b/app/assets/stylesheets/font.css.scss
@@ -1,40 +1,4 @@
 @font-face {
-    font-family: 'ExistenceLight';
-    src: url('Existence-Light-webfont.eot');
-    src: url('Existence-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Existence-Light-webfont.woff') format('woff'),
-         url('Existence-Light-webfont.ttf') format('truetype'),
-         url('Existence-Light-webfont.svg#ExistenceLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExistenceUnicaseLight';
-    src: url('Existence-UnicaseLight-webfont.eot');
-    src: url('Existence-UnicaseLight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Existence-UnicaseLight-webfont.woff') format('woff'),
-         url('Existence-UnicaseLight-webfont.ttf') format('truetype'),
-         url('Existence-UnicaseLight-webfont.svg#ExistenceUnicaseLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExistenceStencilLight';
-    src: url('Existence-StencilLight-webfont.eot');
-    src: url('Existence-StencilLight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Existence-StencilLight-webfont.woff') format('woff'),
-         url('Existence-StencilLight-webfont.ttf') format('truetype'),
-         url('Existence-StencilLight-webfont.svg#ExistenceStencilLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
     font-family: 'WebSymbolsRegular';
     src: url('WebSymbols-Regular-webfont.eot');
     src: url('WebSymbols-Regular-webfont.eot?#iefix') format('embedded-opentype'),
@@ -59,9 +23,22 @@
 
 @font-face {
     font-family: 'WCRoughTrad';
-    src: url('WC_RoughTrad.otf');
+    src: url('WC_RoughTrad-webfont.eot');
+    src: url('WC_RoughTrad-webfont.eot?#iefix') format('embedded-opentype'),
+         url('WC_RoughTrad-webfont.woff') format('woff'),
+         url('WC_RoughTrad-webfont.ttf') format('truetype'),
+         url('WC_RoughTrad-webfont.svg#FFFTusjBold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-
+@font-face {
+    font-family: 'OblikBold';
+    src: url('Oblik_Bold.eot');
+    src: url('Oblik_Bold.eot?#iefix') format('embedded-opentype'),
+         url('Oblik_Bold.woff') format('woff'),
+         url('Oblik_Bold.ttf') format('truetype'),
+         url('Oblik_Bold.svg#FFFTusjBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
