Small CSS tweaks

--- a/app/assets/stylesheets/font.css.scss
+++ b/app/assets/stylesheets/font.css.scss
@@ -34,11 +34,11 @@
 
 @font-face {
     font-family: 'OblikBold';
-    src: url('Oblik_Bold.eot');
-    src: url('Oblik_Bold.eot?#iefix') format('embedded-opentype'),
-         url('Oblik_Bold.woff') format('woff'),
-         url('Oblik_Bold.ttf') format('truetype'),
-         url('Oblik_Bold.svg#FFFTusjBold') format('svg');
+    src: url('Oblik_Bold-webfont.eot');
+    src: url('Oblik_Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Oblik_Bold-webfont.woff') format('woff'),
+         url('Oblik_Bold-webfont.ttf') format('truetype'),
+         url('Oblik_Bold-webfont.svg#FFFTusjBold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
