Lots of CSS tweaks

--- a/app/assets/stylesheets/screen/feedbacks.css.scss
+++ b/app/assets/stylesheets/screen/feedbacks.css.scss
@@ -3,21 +3,48 @@
 }
 
 .feedback {
+    font-size: 13pt;
     margin-left: 10px;
     margin-top: 40px;
-    border-left: 5px solid #ddd;
-    padding-left: 10px;
+    border-radius: 5px;
+    padding: 5px 10px 5px 10px;
+    background: #333;
+    color: #ddd;
+}
+
+.feedback p {
+    margin-top: 1em;
+    margin-bottom: 0;
+}
+
+.feedback a.url, .feedback a.url:visited {
+    padding: 2px;
+    border-radius: 2px;
+    color: #2ad;
+    font-size: 12pt;
+}
+
+.feedback a.url img {
+    vertical-align: middle;
+}
+
+.feedback .delete .button {
+    background: none;
+    color: #b21;
+    font-size: 85%;
+    padding: 0;
+    margin: 0;
 }
 
 form textarea, form input {
     background-color: #181818;
     color: #eee;
-    font-family: WCRoughTrad;
     border: 1px solid white;
     margin: 0;
     padding: 3px;
-    font-size: 20pt;
     border-radius: 3px;
+    font-family: OblikBold;
+    font-size: 13pt;
 }
 
 form input.invalid {
