--- a/app/views/events/_inline.html.haml
+++ b/app/views/events/_inline.html.haml
@@ -38,8 +38,8 @@
   - if @_current_user.id == event.creator.id || @_current_user.admin == true
     .clear
     .delete
-      = link_to "/events/#{event.id}", :method => :delete, :class => 'button' do
-        %span.symbol -
+      = link_to "/events/#{event.id}", :method => :delete, :class => :admin do
+        %span.symbol h
         Delete event
 
   %p.note
