--- a/app/views/feedbacks/_index.html.haml
+++ b/app/views/feedbacks/_index.html.haml
@@ -2,7 +2,7 @@
   .feedback
     - if f.user.id == @_current_user.id || @_current_user.admin == true
       .delete
-        = link_to "/events/#{event.id}/feedbacks/#{f.id}", :method => :delete, :class => :button do
+        = link_to "/events/#{event.id}/feedbacks/#{f.id}", :method => :delete, :class => :admin do
           %span.symbol h
           Delete feedback
 
@@ -28,12 +28,12 @@
 %h3 Post feedback
 
 = form_tag("/events/#{event.id}/feedbacks", :class => 'feedback') do
-  %p
-    %strong
-      %span.symbol.big c
-      feedback
-    from
-    %a(href="https://twitter.com/#{@_current_user.nick}")= "@#{@_current_user.nick}"
+  %strong
+    %span.symbol.big c
+    feedback
+  from
+  %a(href="https://twitter.com/#{@_current_user.nick}")= "@#{@_current_user.nick}"
+  right now!
 
   %p
     = text_area_tag 'content', '', :placeholder => 'something about this event'
