--- a/app/assets/stylesheets/screen/application.css.scss
+++ b/app/assets/stylesheets/screen/application.css.scss
@@ -99,7 +99,7 @@ h3 {
 
 a.admin, a.admin:visited {
     background: none;
-    color: #b21 !importan;
+    color: #b51 !important;
     font-size: 12pt; 
     padding: 0;
     margin: 0;
